--- a/spring-boot.yaml
+++ b/spring-boot.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: gcr.io/<project-id>/springboot:7
+        image: 184053799244.dkr.ecr.ap-south-1.amazonaws.com/testecr:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
